Fixes crbug.com/814318 (spellcheck not functional): - only disables the "spellcheck" section when spellchecking is disabled   by policy, but not if disabled by the user; - disables the context menu entry if spellcheck is enforced by policy.

Bug: 814318
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I26e22bbc945b1cfb89a80a362d1ead1503350e42
Reviewed-on: https://chromium-review.googlesource.com/1087678
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Marc-Antoine Courteau <macourteau@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565253}
Former-commit-id: b79fbf4d1fc58556fdce80100705e17ff81d04f6